added equal temperament button and click logic

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
         <h1>tuning systems. (idk what this is yet?)</h1>
         <p>kind of want a toggle here?... for switching between diff tuning systems...</p>
         <div class="tuning-toggle">
-            <span>tuning system: </span> <button id="pythagorean" class = "on">pythagorean (ancient mesopotamian...)</button> <button id="just-intonation">just intonation</button>
-        </div>        
+            <span>tuning system: </span> <button id="pythagorean" class = "on">pythagorean (ancient mesopotamian...)</button> <button id="just-intonation">just intonation</button> <button id="equal">equal temperament</button>
         <p>let's just go with the flow icl</p>
         <button id="mi2">minor second</button>
         <button id="ma2">major second</button>
