--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <button id="mi7">minor seventh</button>
         <button id="ma7">major seventh</button>
         <button id="oct">octave</button>
+        <p id="freq-ind">frequency last played (1 d.p.): </p>
         <h3>1. Pythagorean Scale</h3>
         <div class="tuning-toggle">
             <span>tuning system: </span> <button id="pythagorean" class = "on">pythagorean (ancient mesopotamian...)</button>
@@ -36,11 +37,11 @@
         <br>the problem with this tuning system is that it creates something called the "Pythagorean Comma", which is a small gap that is made quite obvious when you close the circle of fifths; if you move up 12 perfect fifths, you're <em>supposed</em> to be 7 octaves above your starting note. however, (3/2)^12 != 2^7. some specific intervals will sound just slightly out of tune because of this discrepancy. compare tonic with octave to hear the difference.<br>
         this is all caused by our two main frequency ratios. we are trying to make an equation that is based on tripling (perfect fifths) be equal to an equation based on doubling; we're trying to solve 2^x = 3^y, where x and y are rational.</p>
         
-        <h3 >2. Helmholtz's scale</h3>
+        <h3 >2. Helmholtz's scale (an example of Just Intonation)</h3>
         <div class="tuning-toggle">
             <span>tuning system: </span> <button id="pythagorean" class = "on">pythagorean (ancient mesopotamian...)</button> <!-- <button id="equal-temp">equal temperament</button>--><button id="helmholtz">helmholtz</button>
         </div>            
-        <p>so after the shenanigans with the pythagorean, musicians tried adding extra ratios such as 5/4 (major third), and 6/5 (minor third). this gave sweeter sounding chords. these specific ratios are called the Helmholtz's scale.
+        <p>so after the shenanigans with the pythagorean, musicians tried adding extra ratios such as 5/4 (major third), and 6/5 (minor third). this gave sweeter sounding chords. these specific ratios make up the Helmholtz's scale.
             <br>however, this created new problems. following this system, a D is 9/8, and an A above that is 5/3. so the interval between them is 5/3 ÷ 9/8 = 40/27. this interval is a perfect fifth, so ideally this should be = to 3/2. the distance is off by 21.5 cents (the syntonic comma)</p>
 
        <button id="equal-temp">equal temperament</button>
