add some css and fix bug with multiple helmholtz buttons

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width">
         <title>tuning systems</title>
         <script src="http://unpkg.com/tone"></script>
-
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>tuning systems.</h1>
