fix drop down and layout for diff screen sizes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <div id="buttons">
+            <div id="button-section">
         <button id="ton">tonic</button>
         <button id="mi2">minor second</button>
         <button id="ma2">major second</button>
@@ -21,7 +22,7 @@
         <button id="ma6">major sixth</button>
         <button id="mi7">minor seventh</button>
         <button id="ma7">major seventh</button>
-        <button id="oct">octave</button>
+        <button id="oct">octave</button></div>
         <p id="freq-ind">frequency last played (1 d.p.): </p>
         </div>        
         <section>
