add header / intro page

--- a/index.html
+++ b/index.html
@@ -25,11 +25,19 @@
         <button id="oct">octave</button></div>
         <p id="freq-ind">frequency last played (1 d.p.): </p>
         </div>        
+            <div id="header">
+            <div id="header-container">
+                <h1>tuning systems.</h1>
+            <p>try a few notes out at the top! see if you can spot some differences before we get into it :)</p>
+            <div class="tuning-toggle">
+            <span>tuning system: </span> 
+            <div id="header-buttons"><button id="pythagorean" class = "on">pythagorean (ancient mesopotamian...)</button> <button id="helmholtz">helmholtz</button> <button id="equal-temp">equal temperament</button></div>
+            </div>
+            </div>   
+        </div>
         <section>
 
-                <h1>tuning systems.</h1>
-
-            <div class="scale1">
+            <div class="scale-info">
             <h3>1. Pythagorean Scale</h3>
             <div class="tuning-toggle">
                 <span>tuning system: </span> <button id="pythagorean" class = "on">pythagorean (ancient mesopotamian...)</button>
